<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addMeetingMenuWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMeetingExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_36dp"
        android:src="@drawable/add_36dp"
        android:tint="@color/white"
        android:rotation="45"
        app:backgroundTint="@color/colorPrimaryDark"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:maxImageSize="36dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.ksa.scheduler.ClearFocusEditText
            android:id="@+id/addMeetingNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_meeting_name"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:autofillHints=""
            android:background="@null"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/blue"
            android:textColorLink="@null"
            android:imeOptions="flagNoPersonalizedLearning|actionDone"
            android:textAlignment="center"
            android:inputType="textNoSuggestions"
            android:linksClickable="false"
            app:layout_constraintEnd_toStartOf="@+id/addMeetingColorButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addMeetingColorButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_button"
            android:backgroundTint="@color/A"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addMeetingNameInput"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/addMeetingDateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/addMeetingStartTimeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:hint="@string/startTime"
            android:textColorHint="@color/white"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/addMeetingEndTimeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textAlignment="center"
            android:hint="@string/endTime"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/addMeetingSave"
        android:text="@string/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

</LinearLayout>