<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editAssignmentMenuWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editAssignmentExitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_36dp"
            android:src="@drawable/add_36dp"
            android:tint="@color/white"
            android:rotation="45"
            app:backgroundTint="@color/colorPrimaryDark"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="36dp" />

        <Button
            android:id="@+id/editAssignmentSave"
            android:text="@string/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editAssignmentDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_delete"
            android:src="@android:drawable/ic_menu_delete"
            android:tint="@color/red"
            app:backgroundTint="@color/colorPrimaryDark"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/editAssignmentSave"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="36dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.ksa.scheduler.ClearFocusEditText
            android:id="@+id/editAssignmentNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_assignment_name"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:autofillHints=""
            android:background="@null"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/blue"
            android:textColorLink="@null"
            android:imeOptions="flagNoPersonalizedLearning|actionDone"
            android:textAlignment="center"
            android:inputType="textNoSuggestions"
            android:linksClickable="false"
            app:layout_constraintEnd_toStartOf="@+id/editAssignmentColorButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editAssignmentColorButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_button"
            android:backgroundTint="@color/A"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editAssignmentNameInput"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/editAssignmentDateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
    android:layout_marginTop="20dp" />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">

    <TextView
        android:id="@+id/editAssignmentDueTimeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:hint="@string/dueTime"
        android:textColorHint="@color/white"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/editAssignmentEstimatedTimeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:textAlignment="center"
        android:hint="@string/estimatedTime"
        android:textColorHint="@color/white" />

</LinearLayout>

    <com.ksa.scheduler.ClearFocusEditText
        android:id="@+id/editAssignmentDivisionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:autofillHints=""
        android:background="@null"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/blue"
        android:textColorLink="@null"
        android:imeOptions="flagNoPersonalizedLearning|actionDone"
        android:textAlignment="center"
        android:inputType="textNoSuggestions|number"
        android:linksClickable="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/editAssignmentRV"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
    </ScrollView>

    <NumberPicker
        android:id="@+id/editAssignmentPriorityPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Picker" />

</LinearLayout>
